[2-4]-Product-VilinVil
fixed GetBasketHandler and documentation
